[gd_scene load_steps=14 format=3 uid="uid://dc5yft1fyvocb"]

[ext_resource type="Script" path="res://scripts/Options_menu.gd" id="1_yd3lx"]
[ext_resource type="Theme" uid="uid://dg7yqs5xm6yb3" path="res://recorces/themes/Menu_theme.tres" id="2_way3g"]
[ext_resource type="Texture2D" uid="uid://bu6p81e40xadq" path="res://recorces/GUI/slected_box.png" id="3_gjwy3"]
[ext_resource type="Texture2D" uid="uid://bjr1nvr3t58mk" path="res://recorces/GUI/unslected_box.png" id="4_clj8u"]
[ext_resource type="AudioStream" uid="uid://0ylyxebul06h" path="res://sound_effects/click.wav" id="5_5oaq3"]
[ext_resource type="Texture2D" uid="uid://dojuhsnrab08o" path="res://recorces/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Light/0_Key_Light.png" id="5_krlmo"]
[ext_resource type="Script" path="res://scripts/ControlSettings.gd" id="5_tvpn6"]
[ext_resource type="AudioStream" uid="uid://c7qk1wh0scohr" path="res://sound_effects/button_click.wav" id="6_2uman"]

[sub_resource type="Animation" id="Animation_yfcc3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GraphicsMargin:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioMargin:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m0wwv"]
resource_name = "move_audio"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-300, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tlw6l"]
resource_name = "move_graphics"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GraphicsMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-300, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mukbd"]
resource_name = "options_move"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-300, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6e15"]
_data = {
"RESET": SubResource("Animation_yfcc3"),
"move_audio": SubResource("Animation_m0wwv"),
"move_graphics": SubResource("Animation_tlw6l"),
"options_move": SubResource("Animation_mukbd")
}

[node name="HBox_Options_menu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yd3lx")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Graphics_setting_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Graphics"
alignment = 0

[node name="control_setting_button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Controls"
alignment = 0

[node name="audio_setting_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Audio"
alignment = 0

[node name="Back_to_mainmenu_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Back"
alignment = 0

[node name="GraphicsMargin" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="GraphicsMargin"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="resolution" type="VBoxContainer" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GraphicsMargin/VBoxContainer/resolution"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Resolution"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="GraphicsMargin/VBoxContainer/resolution"]
layout_mode = 2

[node name="Label2" type="Label" parent="GraphicsMargin/VBoxContainer/resolution"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Resolution is work in progress. Fullscreen is recommended!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenCheckBox" type="CheckBox" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_icons/checked = ExtResource("3_gjwy3")
theme_override_icons/unchecked = ExtResource("4_clj8u")
button_pressed = true
text = "Fullscreen"

[node name="VsyncCheckBox" type="CheckBox" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_icons/checked = ExtResource("3_gjwy3")
theme_override_icons/unchecked = ExtResource("4_clj8u")
text = "Vsync
"

[node name="limitFPS" type="VBoxContainer" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GraphicsMargin/VBoxContainer/limitFPS"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Limit FPS: 260"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="GraphicsMargin/VBoxContainer/limitFPS"]
layout_mode = 2
min_value = 1.0
max_value = 360.0
value = 360.0
rounded = true

[node name="show_fpsCheckBox" type="CheckBox" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_icons/checked = ExtResource("3_gjwy3")
theme_override_icons/unchecked = ExtResource("4_clj8u")
text = "Show FPS
"

[node name="Label" type="Label" parent="GraphicsMargin/VBoxContainer/show_fpsCheckBox"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "(in game)"

[node name="apply_graphics" type="Button" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Save and apply"
alignment = 0

[node name="Back_to_options" type="Button" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Back"
alignment = 0

[node name="CheckBox" type="CheckBox" parent="GraphicsMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Dev Debug menu"

[node name="ControlMargin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 32
script = ExtResource("5_tvpn6")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlMargin"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="forwards_input" type="Button" parent="ControlMargin/VBoxContainer"]
custom_minimum_size = Vector2(500, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="HboxContainer" type="HBoxContainer" parent="ControlMargin/VBoxContainer/forwards_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ControlMargin/VBoxContainer/forwards_input/HboxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Forwards:"

[node name="TextureRect" type="TextureRect" parent="ControlMargin/VBoxContainer/forwards_input/HboxContainer"]
layout_mode = 2
texture = ExtResource("5_krlmo")

[node name="backwards_input" type="Button" parent="ControlMargin/VBoxContainer"]
custom_minimum_size = Vector2(500, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HboxContainer" type="HBoxContainer" parent="ControlMargin/VBoxContainer/backwards_input"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = -50.0
offset_right = 236.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ControlMargin/VBoxContainer/backwards_input/HboxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Backwards:"

[node name="TextureRect" type="TextureRect" parent="ControlMargin/VBoxContainer/backwards_input/HboxContainer"]
layout_mode = 2
texture = ExtResource("5_krlmo")

[node name="Back_to_options_control" type="Button" parent="ControlMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Back"
alignment = 0

[node name="AudioMargin" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="AudioMargin"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="master_audio" type="VBoxContainer" parent="AudioMargin/VBoxContainer"]
layout_mode = 2

[node name="m_audio_text" type="Label" parent="AudioMargin/VBoxContainer/master_audio"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Master Audio: +0db"

[node name="m_audio_slider" type="HSlider" parent="AudioMargin/VBoxContainer/master_audio"]
layout_mode = 2
min_value = -20.0
max_value = 20.0
rounded = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioMargin/VBoxContainer/master_audio"]
stream = ExtResource("5_5oaq3")

[node name="gui_audio" type="VBoxContainer" parent="AudioMargin/VBoxContainer"]
layout_mode = 2

[node name="gui_audio_text" type="Label" parent="AudioMargin/VBoxContainer/gui_audio"]
layout_mode = 2
theme = ExtResource("2_way3g")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Menu Audio: +0db"

[node name="ui_audio_slider" type="HSlider" parent="AudioMargin/VBoxContainer/gui_audio"]
layout_mode = 2
min_value = -20.0
max_value = 20.0
rounded = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioMargin/VBoxContainer/gui_audio"]
stream = ExtResource("6_2uman")
bus = &"UI"

[node name="Back_to_options_audio" type="Button" parent="AudioMargin/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "Back"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y6e15")
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_way3g")
text = "SET INPUT TO: "

[connection signal="pressed" from="MarginContainer/VBoxContainer/Graphics_setting_button" to="." method="_on_graphics_setting_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/control_setting_button2" to="." method="_on_control_setting_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/audio_setting_button" to="." method="_on_audio_setting_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_to_mainmenu_button" to="." method="_on_back_to_mainmenu_button_pressed"]
[connection signal="item_selected" from="GraphicsMargin/VBoxContainer/resolution/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="GraphicsMargin/VBoxContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="toggled" from="GraphicsMargin/VBoxContainer/VsyncCheckBox" to="." method="_on_vsync_check_box_toggled"]
[connection signal="value_changed" from="GraphicsMargin/VBoxContainer/limitFPS/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="GraphicsMargin/VBoxContainer/show_fpsCheckBox" to="." method="_on_show_fps_check_box_toggled"]
[connection signal="pressed" from="GraphicsMargin/VBoxContainer/Back_to_options" to="." method="_on_back_to_options_pressed"]
[connection signal="toggled" from="GraphicsMargin/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="button_down" from="ControlMargin/VBoxContainer/forwards_input" to="ControlMargin" method="_on_forwards_input_button_down"]
[connection signal="button_down" from="ControlMargin/VBoxContainer/backwards_input" to="ControlMargin" method="_on_backwards_input_button_down"]
[connection signal="value_changed" from="AudioMargin/VBoxContainer/master_audio/m_audio_slider" to="." method="_on_m_audio_slider_value_changed"]
[connection signal="value_changed" from="AudioMargin/VBoxContainer/gui_audio/ui_audio_slider" to="." method="_on_ui_audio_slider_value_changed"]
[connection signal="pressed" from="AudioMargin/VBoxContainer/Back_to_options_audio" to="." method="_on_back_to_options_audio_pressed"]
